Fixed overlapping elements on home view

--- a/static/styles.css
+++ b/static/styles.css
@@ -187,6 +187,7 @@ body {
 .home-container .home-content-container {
   padding-top: 1em;
   display: flex;
+  flex-wrap: wrap;
   width: 60%;
   margin: auto;
   justify-content: space-evenly; }
@@ -201,6 +202,7 @@ body {
   margin-top: 10px; }
 
 .home-container .home-upcoming-event-container {
+  min-width: 370px;
   display: flex;
   width: 50%;
   text-align: center;
@@ -212,7 +214,9 @@ body {
 
 .home-container .home-account {
   width: 50%;
-  text-align: center; }
+  text-align: center;
+  min-width: 370px;
+  margin-bottom: 2em; }
   .home-container .home-account .home-account-header {
     margin-bottom: 1em; }
 
@@ -311,20 +315,21 @@ body {
           width: 70px; }
     @media screen and (max-width: 66em) {
       .navbar .navbar-content-container .navbar-user {
-        margin-right: 0px !important; }
+        margin-right: 0px; }
         .navbar .navbar-content-container .navbar-user .navbar-user-menu .navbar-user-menu-btn {
-          width: auto;
-          height: auto;
           margin: 0px; }
         .navbar .navbar-content-container .navbar-user .navbar-user-menu span {
-          display: none; } }
+          display: none; }
+      .navbar .navbar-content-container .navbar-logo {
+        margin-left: 2px !important; } }
   @media screen and (max-width: 46em) {
     .navbar .navbar-ane {
       display: none; }
     .navbar .navbar-user {
       display: none; }
     .navbar .responsive-user-btn {
-      display: block !important; }
+      display: block !important;
+      height: 100%; }
     .navbar .navbar-content-container {
       justify-content: center; }
     .navbar .navbar-links {
@@ -384,33 +389,38 @@ body {
     text-align: center; }
     .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn {
       display: none; }
-    @media screen and (min-width: 960px) and (min-height: 420px) {
-      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn {
-        cursor: pointer;
-        text-decoration: none;
-        color: var(--main-text-color);
-        display: block;
-        border-radius: var(--border-radius-size);
-        padding: 10px 0;
-        margin-bottom: 3px;
-        color: var(--white-color);
-        transition: background-color 150ms ease-in; }
-      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.selected {
-        background-color: var(--success-bg-color); }
-        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.selected:hover {
-          background-color: var(--success-bg-hover); }
-      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.benched {
-        background-color: var(--warning-bg-color); }
-        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.benched:hover {
-          background-color: var(--warning-bg-hover); }
-      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.Pending {
-        background-color: var(--info-bg-color); }
-        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.Pending:hover {
-          background-color: var(--info-bg-hover); }
-      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.absent {
-        background-color: var(--danger-bg-color); }
-        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.absent:hover {
-          background-color: var(--danger-bg-hover); } }
+    .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn {
+      cursor: pointer;
+      text-decoration: none;
+      color: var(--main-text-color);
+      display: block;
+      border-radius: var(--border-radius-size);
+      padding: 10px 0;
+      margin-bottom: 3px;
+      color: var(--white-color);
+      transition: background-color 150ms ease-in; }
+      @media screen and (max-width: 750px) {
+        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn {
+          font-size: 0.8em; } }
+      @media screen and (max-width: 400px) {
+        .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn {
+          font-size: 0.7em; } }
+    .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.selected {
+      background-color: var(--success-bg-color); }
+      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.selected:hover {
+        background-color: var(--success-bg-hover); }
+    .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.benched {
+      background-color: var(--warning-bg-color); }
+      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.benched:hover {
+        background-color: var(--warning-bg-hover); }
+    .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.Pending {
+      background-color: var(--info-bg-color); }
+      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.Pending:hover {
+        background-color: var(--info-bg-hover); }
+    .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.absent {
+      background-color: var(--danger-bg-color); }
+      .calendar-grid-container .calendar-grid-item-content .calendar-grid-event-btn.absent:hover {
+        background-color: var(--danger-bg-hover); }
   @media screen and (max-width: 1300px) {
     .calendar-grid-container {
       width: 80%; } }
@@ -946,6 +956,8 @@ body {
               color: var(--white-color);
               border-radius: var(--border-radius-size);
               background-color: var(--warning-bg-color); }
+              .navbar .navbar-hamburger-menu .navbar-hamburger-menu-content .navbar-hamburger-links .nav-item.navbar-toggle-officer-view .toggle-officer-btn:hover {
+                background-color: var(--warning-bg-hover); }
               .navbar .navbar-hamburger-menu .navbar-hamburger-menu-content .navbar-hamburger-links .nav-item.navbar-toggle-officer-view .toggle-officer-btn.active {
                 background-color: var(--success-bg-color); }
                 .navbar .navbar-hamburger-menu .navbar-hamburger-menu-content .navbar-hamburger-links .nav-item.navbar-toggle-officer-view .toggle-officer-btn.active:hover {
